Fixed the scrolling down bug. Exchanged margin for padding which loads faster on users end, avoiding the loading gap of time.

--- a/public/css/projectMan_style.css
+++ b/public/css/projectMan_style.css
@@ -124,7 +124,6 @@
     width: 100%; 
     height: 100%;  
     background-color: var(--white);
-    margin-bottom: 7.5rem; 
 } 
 .container .main .editContainer .form-container {  
     width: 100%; 
